fix spacing

--- a/client/app/dashboard/recordings/recordings.scss
+++ b/client/app/dashboard/recordings/recordings.scss
@@ -1,5 +1,12 @@
 .info {
-    font-size: 14px;
+    font-size: 18px;
+    padding-top: 10px;
+}
+.metadata img {
+    padding-left: 0;
+}
+.row .audio {
+    margin-bottom: 10px;
 }
 .player {
     -webkit-box-sizing: border-box;
